Fixes Problem with not-collapsing margins on p{margin-bottom}
SRFCMS-6745

--- a/source/_patterns/10-components/article-teaser/article-teaser.scss
+++ b/source/_patterns/10-components/article-teaser/article-teaser.scss
@@ -6,7 +6,6 @@
 
   border-top: 1px solid $color-border-medium;
   border-bottom: 1px solid $color-border-medium;
-  padding: 16px;
   display: block;
   width: 100%;
 
@@ -35,7 +34,12 @@
 }
 
 .article-teaser__wrapper {
-  display: inline-block;
+  display: block;
+  margin: 16px;
+  
+  @include tablet-up {
+    overflow: hidden;
+  }
 }
 
 .article-teaser__image {
@@ -54,7 +58,6 @@
 
 .article-teaser__content {
   margin-left: 92px;
-  overflow: hidden;
 
   @include tablet-up {
     margin-left: 158px;
